--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
   <div class="product-container">
       <div class="product-card">
           <img src="IMG/PCGAMER.avif" alt="Producto 1">
-          <h3>PC Gamer RTX 3060</h3>
+          <h3>PC Gamer RTX Full HD 3060</h3>
           <p>Procesador Ryzen 5, 16GB RAM, SSD 512GB</p>
           <strong>$5.200.000</strong>
           <button>Añadir al carrito</button>
       </div>
       <div class="product-card">
           <img src="IMG/LAPTOP.webp" alt="Producto 2">
-          <h3>Laptop Gaming i7</h3>
+          <h3>Laptop Gaming Tf i7</h3>
           <p>Intel i7, 16GB RAM, RTX 3050</p>
           <strong>$3.100.000</strong>
           <button>Añadir al carrito</button>
@@ -81,7 +81,7 @@
   </div>
 </section>
 
-<section class="servicios">
+<section id="servicios">
     <h2>Servicios</h2>
     <div class="contenedor-tarjetas">
       <div class="tarjeta">
